# python-mcap-ros1-support

./: Pipfile  README.md  setup.cfg
.github/workflows/: ci.yml
mcap_ros1/: decoder.py  ros1_decoder.py  writer.py
tests/: generate.py  test_ros_decoder.py  test_ros_writer.py
