[metadata]
name = mcap-ros1-support
version = 0.0.1
description = ROS1 support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires = 
    mcap
packages = find:
python_requires = >=3.8
